Fix layout bugs

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,14 +18,6 @@ article {
   margin-bottom: 50px;
 }
 
-h1 {
-  margin-top: 10px;
-}
-
-h5 {
-  float: left;
-  margin-left: 20px;
-}
 .navbar {
   background-color: #eee;
   margin-bottom: 0;
@@ -76,7 +68,7 @@ footer {
 .containerLogin {
   height: 100%;
   opacity: 100%;
-  padding: 15%;
+  padding: auto;
   text-align: center;
   display: block;
 }
@@ -87,7 +79,7 @@ footer {
   position: relative;
   margin: auto;
   height: 100%;
-  padding: 15%;
+  padding: 20%;
   text-align: center;
 }
 
@@ -129,7 +121,7 @@ footer {
 
 .containerWaiter {
   height: 100%;
-  padding: 15%;
+  padding: auto;
   text-align: center;
   display: block;
   padding: 20px;
@@ -140,6 +132,10 @@ footer {
   max-height: 80%;
   max-width: 80%;
   margin: auto;
+}
+
+h1 {
+  margin-top: 10px;
 }
 
 .tablesLayout,
@@ -169,10 +165,11 @@ footer {
   background: #CACAC4;
   min-width: 10px;
   border-radius: 4px;
+
 }
 
 .tableBtn {
-  margin: 20%;
+  margin-top: 5%;
   font-family: "Roboto", sans-serif;
   background-color: #eee;
   color: black;
@@ -197,11 +194,16 @@ footer {
   background-color: grey;
 }
 
+h5 {
+  float: left;
+  margin-left: 42px;
+}
 .waiterList{
   list-style: none;
 }
 .card {
   position: relative;
   margin-bottom: 100%;
-  margin-top: 25%;
+  margin-top: auto;
 }
+
